# mmdetection

./: .bumpversion.cfg  .coveragerc  .flake8  .gitignore  Dockerfile  README.md  docker-compose.yml  pytest.ini  run_tests.py  setup.cfg  setup.py
configs/: resnet_features.py
configs/_base_/datasets/: logo_merged_dataset.py  logodet_3k.py  logodet_3k_test.py  logos_dataset_detection.py  logos_dataset_detection_micro.py  openBrand_detection.py  open_brand_dataset.py  openbrand_micro.py  openbrand_micro_test.py  openbrand_reduced.py  openbrand_reduced_robust_nc.py  rp_all_ds.py  rp_all_ds_2d.py  rp_all_ds_micro.py  rp_all_ds_multiclass.py  rp_logos_dataset.py  rp_logos_dataset_micro.py
configs/_base_/models/: robust_logo_r50_rfp.py  robust_logo_r50_rfp_nc.py  robust_logo_r50_rfp_nc_uf1.py
configs/centermask/: centermask_r50_caffe_logo.py
configs/fcos/: fcos_center-normbbox-centeronreg-giou_r50_caffe_fpn_gn-head_dcn_1x_concat.py  fcos_center-normbbox-centeronreg-giou_r50_caffe_fpn_gn-head_dcn_1x_logo.py  fcos_center-normbbox-centeronreg-giou_r50_caffe_fpn_gn-head_dcn_1x_logo_merged.py  fcos_r50_caffe_fpn_gn-head_1x_base.py  fcos_r50_caffe_fpn_gn-head_1x_base_multiclass.py  fcos_r50_caffe_fpn_gn-head_1x_concat.py  fcos_r50_caffe_fpn_gn-head_1x_logo.py  fcos_r50_caffe_fpn_gn-head_1x_logo_merged.py
configs/robustnet/: robust_logo_nc_micro.py  robust_logo_nc_rp.py  robust_logo_r50_rfp_1x_logodet.py  robust_logo_r50_rfp_1x_logos_dataset.py  robust_logo_r50_rfp_1x_micro.py  robust_logo_r50_rfp_1x_nc.py  robust_logo_r50_rfp_1x_nc_2d.py  robust_logo_r50_rfp_1x_nc_micro.py  robust_logo_r50_rfp_1x_nc_uf1.py  robust_logo_r50_rfp_1x_openbrand.py  testing.py
custom/methods/: bbox_detector.py  faiss_classifier.py  feature_extractor.py
custom/models/: __init__.py  result.py
mmdet/apis/: inference.py  train.py
mmdet/core/evaluation/: recall.py
mmdet/datasets/: __init__.py  classification.py  custom.py  dataset_wrappers.py  logo_rp_dataset.py  logos_dataset.py  openBrand.py  xml_style.py
mmdet/datasets/pipelines/: __init__.py  transforms.py
mmdet/models/dense_heads/: SpatialAttentionMaskHead.py  __init__.py  openbrand_feature_representation.py  spatial_attention_mask_head.py
mmdet/models/detectors/: __init__.py  centermask.py
mmdet/models/losses/: __init__.py
requirements/: base.txt  flake8.txt  setup.txt  system.txt  tests.txt
rplogo/: __init__.py  extractor.py
rplogo/rpbbox/: __init__.py  base.py
rplogo/services/: __init__.py  http_utils.py  logograb.py  schemas.py
rplogo/tests/: test_extractor.py
tools/: inference_test.py  mmdet_inference.py  test.py  test_guille.py  test_visual.py  train_faiss_guille.py
tools/misc/: browse_dataset.py
(+8 files in other folders)
