[metadata]
name = rploglib
version = 1.0.0
author = Red Points
author-email = dev@redpoints.com
url = http://www.redpoints.com
home-page = http://www.redpoints.com
summary = Red Points Logo library
description = Red Points Logo Recognition library
description-file = 
	README.md
description-content-type = text/x-rst; charset=UTF-8
classifier = 
	Development Status :: 1 - Planning
	Programming Language :: Python
	Programming Language :: Python :: 3.6
	Intended Audience :: Developers
	Intended Audience :: Information Technology
keywords = 
	data science
	image
	logo-recognition
	redpoints
license = MIT
requires-python = >=3.6

[options]
zip_safe = True
setup_requires =
	setuptools>30
	flake8
	flake8-checkstyle
	flake8-docstrings
	flake8-import-order
	flake8-logging-format
	flake8-rst-docstrings
	pytest
	pytest-cov
	pytest-flakes
	pytest-pep8
	pytest-runner
	python-setup-hook
	sphinx
	sphinxcontrib-apidoc
install_requires =
	numpy
	requests
	schema==0.7.1
tests_require =
	pytest==5.3.2
	pytest-cov
	pytest-pep8
	pytest-flakes

[wheel]
universal = 1

[egg_info]
tag_build = 
tag_svn_revision = false

[aliases]
doc=build_sphinx
test=pytest

[files]
packages =
	rplogo

[pbr]
warnerrors = True

[build_sphinx]
all_files = 1
source-dir = doc/source
build-dir = doc/build
